// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip default 1`] = `
<ForwardRef>
  <Chip
    forwardRef={null}
  >
    <WithStyles(ForwardRef(Chip))
      classes={
        Object {
          "clickable": "makeStyles-clickable-5",
          "deleteIcon": "makeStyles-deleteIcon-6",
          "root": "makeStyles-root-4",
        }
      }
      color="default"
      deleteIcon={
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f00d",
                "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
              ],
              "iconName": "times",
              "prefix": "fal",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      }
      size="medium"
      variant="default"
    >
      <ForwardRef(Chip)
        classes={
          Object {
            "avatar": "MuiChip-avatar",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary",
            "avatarSmall": "MuiChip-avatarSmall",
            "clickable": "MuiChip-clickable makeStyles-clickable-5",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary",
            "colorPrimary": "MuiChip-colorPrimary",
            "colorSecondary": "MuiChip-colorSecondary",
            "deletable": "MuiChip-deletable",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary",
            "deleteIcon": "MuiChip-deleteIcon makeStyles-deleteIcon-6",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary",
            "deleteIconSmall": "MuiChip-deleteIconSmall",
            "disabled": "Mui-disabled",
            "icon": "MuiChip-icon",
            "iconColorPrimary": "MuiChip-iconColorPrimary",
            "iconColorSecondary": "MuiChip-iconColorSecondary",
            "iconSmall": "MuiChip-iconSmall",
            "label": "MuiChip-label",
            "labelSmall": "MuiChip-labelSmall",
            "outlined": "MuiChip-outlined",
            "outlinedPrimary": "MuiChip-outlinedPrimary",
            "outlinedSecondary": "MuiChip-outlinedSecondary",
            "root": "MuiChip-root makeStyles-root-4",
            "sizeSmall": "MuiChip-sizeSmall",
          }
        }
        color="default"
        deleteIcon={
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [],
                  "f00d",
                  "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
                ],
                "iconName": "times",
                "prefix": "fal",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        }
        size="medium"
        variant="default"
      >
        <div
          className="MuiChip-root makeStyles-root-4"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          />
        </div>
      </ForwardRef(Chip)>
    </WithStyles(ForwardRef(Chip))>
  </Chip>
</ForwardRef>
`;

exports[`Chip snapshots should match snapshot 1`] = `
<ForwardRef>
  <Chip
    forwardRef={null}
  >
    <WithStyles(ForwardRef(Chip))
      classes={
        Object {
          "clickable": "makeStyles-clickable-2",
          "deleteIcon": "makeStyles-deleteIcon-3",
          "root": "makeStyles-root-1",
        }
      }
      color="default"
      deleteIcon={
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f00d",
                "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
              ],
              "iconName": "times",
              "prefix": "fal",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      }
      size="medium"
      variant="default"
    >
      <ForwardRef(Chip)
        classes={
          Object {
            "avatar": "MuiChip-avatar",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary",
            "avatarSmall": "MuiChip-avatarSmall",
            "clickable": "MuiChip-clickable makeStyles-clickable-2",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary",
            "colorPrimary": "MuiChip-colorPrimary",
            "colorSecondary": "MuiChip-colorSecondary",
            "deletable": "MuiChip-deletable",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary",
            "deleteIcon": "MuiChip-deleteIcon makeStyles-deleteIcon-3",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary",
            "deleteIconSmall": "MuiChip-deleteIconSmall",
            "disabled": "Mui-disabled",
            "icon": "MuiChip-icon",
            "iconColorPrimary": "MuiChip-iconColorPrimary",
            "iconColorSecondary": "MuiChip-iconColorSecondary",
            "iconSmall": "MuiChip-iconSmall",
            "label": "MuiChip-label",
            "labelSmall": "MuiChip-labelSmall",
            "outlined": "MuiChip-outlined",
            "outlinedPrimary": "MuiChip-outlinedPrimary",
            "outlinedSecondary": "MuiChip-outlinedSecondary",
            "root": "MuiChip-root makeStyles-root-1",
            "sizeSmall": "MuiChip-sizeSmall",
          }
        }
        color="default"
        deleteIcon={
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [],
                  "f00d",
                  "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
                ],
                "iconName": "times",
                "prefix": "fal",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        }
        size="medium"
        variant="default"
      >
        <div
          className="MuiChip-root makeStyles-root-1"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          />
        </div>
      </ForwardRef(Chip)>
    </WithStyles(ForwardRef(Chip))>
  </Chip>
</ForwardRef>
`;

exports[`Chip test custom colors color = blue 1`] = `
<ForwardRef
  color="blue"
>
  <Chip
    color="blue"
    forwardRef={null}
  >
    <WithStyles(ForwardRef(Chip))
      classes={
        Object {
          "clickable": "makeStyles-clickable-11",
          "deleteIcon": "makeStyles-deleteIcon-12",
          "root": "makeStyles-root-10",
        }
      }
      deleteIcon={
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f00d",
                "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
              ],
              "iconName": "times",
              "prefix": "fal",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      }
      size="medium"
      variant="default"
    >
      <ForwardRef(Chip)
        classes={
          Object {
            "avatar": "MuiChip-avatar",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary",
            "avatarSmall": "MuiChip-avatarSmall",
            "clickable": "MuiChip-clickable makeStyles-clickable-11",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary",
            "colorPrimary": "MuiChip-colorPrimary",
            "colorSecondary": "MuiChip-colorSecondary",
            "deletable": "MuiChip-deletable",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary",
            "deleteIcon": "MuiChip-deleteIcon makeStyles-deleteIcon-12",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary",
            "deleteIconSmall": "MuiChip-deleteIconSmall",
            "disabled": "Mui-disabled",
            "icon": "MuiChip-icon",
            "iconColorPrimary": "MuiChip-iconColorPrimary",
            "iconColorSecondary": "MuiChip-iconColorSecondary",
            "iconSmall": "MuiChip-iconSmall",
            "label": "MuiChip-label",
            "labelSmall": "MuiChip-labelSmall",
            "outlined": "MuiChip-outlined",
            "outlinedPrimary": "MuiChip-outlinedPrimary",
            "outlinedSecondary": "MuiChip-outlinedSecondary",
            "root": "MuiChip-root makeStyles-root-10",
            "sizeSmall": "MuiChip-sizeSmall",
          }
        }
        deleteIcon={
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [],
                  "f00d",
                  "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
                ],
                "iconName": "times",
                "prefix": "fal",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        }
        size="medium"
        variant="default"
      >
        <div
          className="MuiChip-root makeStyles-root-10"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          />
        </div>
      </ForwardRef(Chip)>
    </WithStyles(ForwardRef(Chip))>
  </Chip>
</ForwardRef>
`;

exports[`Chip test custom colors color = default 1`] = `
<ForwardRef
  color="default"
>
  <Chip
    color="default"
    forwardRef={null}
  >
    <WithStyles(ForwardRef(Chip))
      classes={
        Object {
          "clickable": "makeStyles-clickable-8",
          "deleteIcon": "makeStyles-deleteIcon-9",
          "root": "makeStyles-root-7",
        }
      }
      color="default"
      deleteIcon={
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f00d",
                "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
              ],
              "iconName": "times",
              "prefix": "fal",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      }
      size="medium"
      variant="default"
    >
      <ForwardRef(Chip)
        classes={
          Object {
            "avatar": "MuiChip-avatar",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary",
            "avatarSmall": "MuiChip-avatarSmall",
            "clickable": "MuiChip-clickable makeStyles-clickable-8",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary",
            "colorPrimary": "MuiChip-colorPrimary",
            "colorSecondary": "MuiChip-colorSecondary",
            "deletable": "MuiChip-deletable",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary",
            "deleteIcon": "MuiChip-deleteIcon makeStyles-deleteIcon-9",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary",
            "deleteIconSmall": "MuiChip-deleteIconSmall",
            "disabled": "Mui-disabled",
            "icon": "MuiChip-icon",
            "iconColorPrimary": "MuiChip-iconColorPrimary",
            "iconColorSecondary": "MuiChip-iconColorSecondary",
            "iconSmall": "MuiChip-iconSmall",
            "label": "MuiChip-label",
            "labelSmall": "MuiChip-labelSmall",
            "outlined": "MuiChip-outlined",
            "outlinedPrimary": "MuiChip-outlinedPrimary",
            "outlinedSecondary": "MuiChip-outlinedSecondary",
            "root": "MuiChip-root makeStyles-root-7",
            "sizeSmall": "MuiChip-sizeSmall",
          }
        }
        color="default"
        deleteIcon={
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [],
                  "f00d",
                  "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
                ],
                "iconName": "times",
                "prefix": "fal",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        }
        size="medium"
        variant="default"
      >
        <div
          className="MuiChip-root makeStyles-root-7"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          />
        </div>
      </ForwardRef(Chip)>
    </WithStyles(ForwardRef(Chip))>
  </Chip>
</ForwardRef>
`;

exports[`Chip test custom colors color = green 1`] = `
<ForwardRef
  color="green"
>
  <Chip
    color="green"
    forwardRef={null}
  >
    <WithStyles(ForwardRef(Chip))
      classes={
        Object {
          "clickable": "makeStyles-clickable-14",
          "deleteIcon": "makeStyles-deleteIcon-15",
          "root": "makeStyles-root-13",
        }
      }
      deleteIcon={
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f00d",
                "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
              ],
              "iconName": "times",
              "prefix": "fal",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      }
      size="medium"
      variant="default"
    >
      <ForwardRef(Chip)
        classes={
          Object {
            "avatar": "MuiChip-avatar",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary",
            "avatarSmall": "MuiChip-avatarSmall",
            "clickable": "MuiChip-clickable makeStyles-clickable-14",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary",
            "colorPrimary": "MuiChip-colorPrimary",
            "colorSecondary": "MuiChip-colorSecondary",
            "deletable": "MuiChip-deletable",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary",
            "deleteIcon": "MuiChip-deleteIcon makeStyles-deleteIcon-15",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary",
            "deleteIconSmall": "MuiChip-deleteIconSmall",
            "disabled": "Mui-disabled",
            "icon": "MuiChip-icon",
            "iconColorPrimary": "MuiChip-iconColorPrimary",
            "iconColorSecondary": "MuiChip-iconColorSecondary",
            "iconSmall": "MuiChip-iconSmall",
            "label": "MuiChip-label",
            "labelSmall": "MuiChip-labelSmall",
            "outlined": "MuiChip-outlined",
            "outlinedPrimary": "MuiChip-outlinedPrimary",
            "outlinedSecondary": "MuiChip-outlinedSecondary",
            "root": "MuiChip-root makeStyles-root-13",
            "sizeSmall": "MuiChip-sizeSmall",
          }
        }
        deleteIcon={
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [],
                  "f00d",
                  "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
                ],
                "iconName": "times",
                "prefix": "fal",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        }
        size="medium"
        variant="default"
      >
        <div
          className="MuiChip-root makeStyles-root-13"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          />
        </div>
      </ForwardRef(Chip)>
    </WithStyles(ForwardRef(Chip))>
  </Chip>
</ForwardRef>
`;

exports[`Chip test custom colors color = magenta 1`] = `
<ForwardRef
  color="magenta"
>
  <Chip
    color="magenta"
    forwardRef={null}
  >
    <WithStyles(ForwardRef(Chip))
      classes={
        Object {
          "clickable": "makeStyles-clickable-17",
          "deleteIcon": "makeStyles-deleteIcon-18",
          "root": "makeStyles-root-16",
        }
      }
      deleteIcon={
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f00d",
                "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
              ],
              "iconName": "times",
              "prefix": "fal",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      }
      size="medium"
      variant="default"
    >
      <ForwardRef(Chip)
        classes={
          Object {
            "avatar": "MuiChip-avatar",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary",
            "avatarSmall": "MuiChip-avatarSmall",
            "clickable": "MuiChip-clickable makeStyles-clickable-17",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary",
            "colorPrimary": "MuiChip-colorPrimary",
            "colorSecondary": "MuiChip-colorSecondary",
            "deletable": "MuiChip-deletable",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary",
            "deleteIcon": "MuiChip-deleteIcon makeStyles-deleteIcon-18",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary",
            "deleteIconSmall": "MuiChip-deleteIconSmall",
            "disabled": "Mui-disabled",
            "icon": "MuiChip-icon",
            "iconColorPrimary": "MuiChip-iconColorPrimary",
            "iconColorSecondary": "MuiChip-iconColorSecondary",
            "iconSmall": "MuiChip-iconSmall",
            "label": "MuiChip-label",
            "labelSmall": "MuiChip-labelSmall",
            "outlined": "MuiChip-outlined",
            "outlinedPrimary": "MuiChip-outlinedPrimary",
            "outlinedSecondary": "MuiChip-outlinedSecondary",
            "root": "MuiChip-root makeStyles-root-16",
            "sizeSmall": "MuiChip-sizeSmall",
          }
        }
        deleteIcon={
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [],
                  "f00d",
                  "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
                ],
                "iconName": "times",
                "prefix": "fal",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        }
        size="medium"
        variant="default"
      >
        <div
          className="MuiChip-root makeStyles-root-16"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          />
        </div>
      </ForwardRef(Chip)>
    </WithStyles(ForwardRef(Chip))>
  </Chip>
</ForwardRef>
`;

exports[`Chip test custom colors color = orange 1`] = `
<ForwardRef
  color="orange"
>
  <Chip
    color="orange"
    forwardRef={null}
  >
    <WithStyles(ForwardRef(Chip))
      classes={
        Object {
          "clickable": "makeStyles-clickable-20",
          "deleteIcon": "makeStyles-deleteIcon-21",
          "root": "makeStyles-root-19",
        }
      }
      deleteIcon={
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f00d",
                "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
              ],
              "iconName": "times",
              "prefix": "fal",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      }
      size="medium"
      variant="default"
    >
      <ForwardRef(Chip)
        classes={
          Object {
            "avatar": "MuiChip-avatar",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary",
            "avatarSmall": "MuiChip-avatarSmall",
            "clickable": "MuiChip-clickable makeStyles-clickable-20",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary",
            "colorPrimary": "MuiChip-colorPrimary",
            "colorSecondary": "MuiChip-colorSecondary",
            "deletable": "MuiChip-deletable",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary",
            "deleteIcon": "MuiChip-deleteIcon makeStyles-deleteIcon-21",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary",
            "deleteIconSmall": "MuiChip-deleteIconSmall",
            "disabled": "Mui-disabled",
            "icon": "MuiChip-icon",
            "iconColorPrimary": "MuiChip-iconColorPrimary",
            "iconColorSecondary": "MuiChip-iconColorSecondary",
            "iconSmall": "MuiChip-iconSmall",
            "label": "MuiChip-label",
            "labelSmall": "MuiChip-labelSmall",
            "outlined": "MuiChip-outlined",
            "outlinedPrimary": "MuiChip-outlinedPrimary",
            "outlinedSecondary": "MuiChip-outlinedSecondary",
            "root": "MuiChip-root makeStyles-root-19",
            "sizeSmall": "MuiChip-sizeSmall",
          }
        }
        deleteIcon={
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [],
                  "f00d",
                  "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
                ],
                "iconName": "times",
                "prefix": "fal",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        }
        size="medium"
        variant="default"
      >
        <div
          className="MuiChip-root makeStyles-root-19"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          />
        </div>
      </ForwardRef(Chip)>
    </WithStyles(ForwardRef(Chip))>
  </Chip>
</ForwardRef>
`;

exports[`Chip test custom colors color = primary 1`] = `
<ForwardRef
  color="primary"
>
  <Chip
    color="primary"
    forwardRef={null}
  >
    <WithStyles(ForwardRef(Chip))
      classes={
        Object {
          "clickable": "makeStyles-clickable-35",
          "deleteIcon": "makeStyles-deleteIcon-36",
          "root": "makeStyles-root-34",
        }
      }
      color="primary"
      deleteIcon={
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f00d",
                "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
              ],
              "iconName": "times",
              "prefix": "fal",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      }
      size="medium"
      variant="default"
    >
      <ForwardRef(Chip)
        classes={
          Object {
            "avatar": "MuiChip-avatar",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary",
            "avatarSmall": "MuiChip-avatarSmall",
            "clickable": "MuiChip-clickable makeStyles-clickable-35",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary",
            "colorPrimary": "MuiChip-colorPrimary",
            "colorSecondary": "MuiChip-colorSecondary",
            "deletable": "MuiChip-deletable",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary",
            "deleteIcon": "MuiChip-deleteIcon makeStyles-deleteIcon-36",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary",
            "deleteIconSmall": "MuiChip-deleteIconSmall",
            "disabled": "Mui-disabled",
            "icon": "MuiChip-icon",
            "iconColorPrimary": "MuiChip-iconColorPrimary",
            "iconColorSecondary": "MuiChip-iconColorSecondary",
            "iconSmall": "MuiChip-iconSmall",
            "label": "MuiChip-label",
            "labelSmall": "MuiChip-labelSmall",
            "outlined": "MuiChip-outlined",
            "outlinedPrimary": "MuiChip-outlinedPrimary",
            "outlinedSecondary": "MuiChip-outlinedSecondary",
            "root": "MuiChip-root makeStyles-root-34",
            "sizeSmall": "MuiChip-sizeSmall",
          }
        }
        color="primary"
        deleteIcon={
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [],
                  "f00d",
                  "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
                ],
                "iconName": "times",
                "prefix": "fal",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        }
        size="medium"
        variant="default"
      >
        <div
          className="MuiChip-root makeStyles-root-34 MuiChip-colorPrimary"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          />
        </div>
      </ForwardRef(Chip)>
    </WithStyles(ForwardRef(Chip))>
  </Chip>
</ForwardRef>
`;

exports[`Chip test custom colors color = red 1`] = `
<ForwardRef
  color="red"
>
  <Chip
    color="red"
    forwardRef={null}
  >
    <WithStyles(ForwardRef(Chip))
      classes={
        Object {
          "clickable": "makeStyles-clickable-23",
          "deleteIcon": "makeStyles-deleteIcon-24",
          "root": "makeStyles-root-22",
        }
      }
      deleteIcon={
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f00d",
                "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
              ],
              "iconName": "times",
              "prefix": "fal",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      }
      size="medium"
      variant="default"
    >
      <ForwardRef(Chip)
        classes={
          Object {
            "avatar": "MuiChip-avatar",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary",
            "avatarSmall": "MuiChip-avatarSmall",
            "clickable": "MuiChip-clickable makeStyles-clickable-23",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary",
            "colorPrimary": "MuiChip-colorPrimary",
            "colorSecondary": "MuiChip-colorSecondary",
            "deletable": "MuiChip-deletable",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary",
            "deleteIcon": "MuiChip-deleteIcon makeStyles-deleteIcon-24",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary",
            "deleteIconSmall": "MuiChip-deleteIconSmall",
            "disabled": "Mui-disabled",
            "icon": "MuiChip-icon",
            "iconColorPrimary": "MuiChip-iconColorPrimary",
            "iconColorSecondary": "MuiChip-iconColorSecondary",
            "iconSmall": "MuiChip-iconSmall",
            "label": "MuiChip-label",
            "labelSmall": "MuiChip-labelSmall",
            "outlined": "MuiChip-outlined",
            "outlinedPrimary": "MuiChip-outlinedPrimary",
            "outlinedSecondary": "MuiChip-outlinedSecondary",
            "root": "MuiChip-root makeStyles-root-22",
            "sizeSmall": "MuiChip-sizeSmall",
          }
        }
        deleteIcon={
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [],
                  "f00d",
                  "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
                ],
                "iconName": "times",
                "prefix": "fal",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        }
        size="medium"
        variant="default"
      >
        <div
          className="MuiChip-root makeStyles-root-22"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          />
        </div>
      </ForwardRef(Chip)>
    </WithStyles(ForwardRef(Chip))>
  </Chip>
</ForwardRef>
`;

exports[`Chip test custom colors color = secondary 1`] = `
<ForwardRef
  color="secondary"
>
  <Chip
    color="secondary"
    forwardRef={null}
  >
    <WithStyles(ForwardRef(Chip))
      classes={
        Object {
          "clickable": "makeStyles-clickable-38",
          "deleteIcon": "makeStyles-deleteIcon-39",
          "root": "makeStyles-root-37",
        }
      }
      color="secondary"
      deleteIcon={
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f00d",
                "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
              ],
              "iconName": "times",
              "prefix": "fal",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      }
      size="medium"
      variant="default"
    >
      <ForwardRef(Chip)
        classes={
          Object {
            "avatar": "MuiChip-avatar",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary",
            "avatarSmall": "MuiChip-avatarSmall",
            "clickable": "MuiChip-clickable makeStyles-clickable-38",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary",
            "colorPrimary": "MuiChip-colorPrimary",
            "colorSecondary": "MuiChip-colorSecondary",
            "deletable": "MuiChip-deletable",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary",
            "deleteIcon": "MuiChip-deleteIcon makeStyles-deleteIcon-39",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary",
            "deleteIconSmall": "MuiChip-deleteIconSmall",
            "disabled": "Mui-disabled",
            "icon": "MuiChip-icon",
            "iconColorPrimary": "MuiChip-iconColorPrimary",
            "iconColorSecondary": "MuiChip-iconColorSecondary",
            "iconSmall": "MuiChip-iconSmall",
            "label": "MuiChip-label",
            "labelSmall": "MuiChip-labelSmall",
            "outlined": "MuiChip-outlined",
            "outlinedPrimary": "MuiChip-outlinedPrimary",
            "outlinedSecondary": "MuiChip-outlinedSecondary",
            "root": "MuiChip-root makeStyles-root-37",
            "sizeSmall": "MuiChip-sizeSmall",
          }
        }
        color="secondary"
        deleteIcon={
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [],
                  "f00d",
                  "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
                ],
                "iconName": "times",
                "prefix": "fal",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        }
        size="medium"
        variant="default"
      >
        <div
          className="MuiChip-root makeStyles-root-37 MuiChip-colorSecondary"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          />
        </div>
      </ForwardRef(Chip)>
    </WithStyles(ForwardRef(Chip))>
  </Chip>
</ForwardRef>
`;

exports[`Chip test custom colors color = teal 1`] = `
<ForwardRef
  color="teal"
>
  <Chip
    color="teal"
    forwardRef={null}
  >
    <WithStyles(ForwardRef(Chip))
      classes={
        Object {
          "clickable": "makeStyles-clickable-26",
          "deleteIcon": "makeStyles-deleteIcon-27",
          "root": "makeStyles-root-25",
        }
      }
      deleteIcon={
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f00d",
                "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
              ],
              "iconName": "times",
              "prefix": "fal",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      }
      size="medium"
      variant="default"
    >
      <ForwardRef(Chip)
        classes={
          Object {
            "avatar": "MuiChip-avatar",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary",
            "avatarSmall": "MuiChip-avatarSmall",
            "clickable": "MuiChip-clickable makeStyles-clickable-26",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary",
            "colorPrimary": "MuiChip-colorPrimary",
            "colorSecondary": "MuiChip-colorSecondary",
            "deletable": "MuiChip-deletable",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary",
            "deleteIcon": "MuiChip-deleteIcon makeStyles-deleteIcon-27",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary",
            "deleteIconSmall": "MuiChip-deleteIconSmall",
            "disabled": "Mui-disabled",
            "icon": "MuiChip-icon",
            "iconColorPrimary": "MuiChip-iconColorPrimary",
            "iconColorSecondary": "MuiChip-iconColorSecondary",
            "iconSmall": "MuiChip-iconSmall",
            "label": "MuiChip-label",
            "labelSmall": "MuiChip-labelSmall",
            "outlined": "MuiChip-outlined",
            "outlinedPrimary": "MuiChip-outlinedPrimary",
            "outlinedSecondary": "MuiChip-outlinedSecondary",
            "root": "MuiChip-root makeStyles-root-25",
            "sizeSmall": "MuiChip-sizeSmall",
          }
        }
        deleteIcon={
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [],
                  "f00d",
                  "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
                ],
                "iconName": "times",
                "prefix": "fal",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        }
        size="medium"
        variant="default"
      >
        <div
          className="MuiChip-root makeStyles-root-25"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          />
        </div>
      </ForwardRef(Chip)>
    </WithStyles(ForwardRef(Chip))>
  </Chip>
</ForwardRef>
`;

exports[`Chip test custom colors color = violet 1`] = `
<ForwardRef
  color="violet"
>
  <Chip
    color="violet"
    forwardRef={null}
  >
    <WithStyles(ForwardRef(Chip))
      classes={
        Object {
          "clickable": "makeStyles-clickable-29",
          "deleteIcon": "makeStyles-deleteIcon-30",
          "root": "makeStyles-root-28",
        }
      }
      deleteIcon={
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f00d",
                "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
              ],
              "iconName": "times",
              "prefix": "fal",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      }
      size="medium"
      variant="default"
    >
      <ForwardRef(Chip)
        classes={
          Object {
            "avatar": "MuiChip-avatar",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary",
            "avatarSmall": "MuiChip-avatarSmall",
            "clickable": "MuiChip-clickable makeStyles-clickable-29",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary",
            "colorPrimary": "MuiChip-colorPrimary",
            "colorSecondary": "MuiChip-colorSecondary",
            "deletable": "MuiChip-deletable",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary",
            "deleteIcon": "MuiChip-deleteIcon makeStyles-deleteIcon-30",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary",
            "deleteIconSmall": "MuiChip-deleteIconSmall",
            "disabled": "Mui-disabled",
            "icon": "MuiChip-icon",
            "iconColorPrimary": "MuiChip-iconColorPrimary",
            "iconColorSecondary": "MuiChip-iconColorSecondary",
            "iconSmall": "MuiChip-iconSmall",
            "label": "MuiChip-label",
            "labelSmall": "MuiChip-labelSmall",
            "outlined": "MuiChip-outlined",
            "outlinedPrimary": "MuiChip-outlinedPrimary",
            "outlinedSecondary": "MuiChip-outlinedSecondary",
            "root": "MuiChip-root makeStyles-root-28",
            "sizeSmall": "MuiChip-sizeSmall",
          }
        }
        deleteIcon={
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [],
                  "f00d",
                  "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
                ],
                "iconName": "times",
                "prefix": "fal",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        }
        size="medium"
        variant="default"
      >
        <div
          className="MuiChip-root makeStyles-root-28"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          />
        </div>
      </ForwardRef(Chip)>
    </WithStyles(ForwardRef(Chip))>
  </Chip>
</ForwardRef>
`;

exports[`Chip test custom colors color = yellow 1`] = `
<ForwardRef
  color="yellow"
>
  <Chip
    color="yellow"
    forwardRef={null}
  >
    <WithStyles(ForwardRef(Chip))
      classes={
        Object {
          "clickable": "makeStyles-clickable-32",
          "deleteIcon": "makeStyles-deleteIcon-33",
          "root": "makeStyles-root-31",
        }
      }
      deleteIcon={
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                320,
                512,
                Array [],
                "f00d",
                "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
              ],
              "iconName": "times",
              "prefix": "fal",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      }
      size="medium"
      variant="default"
    >
      <ForwardRef(Chip)
        classes={
          Object {
            "avatar": "MuiChip-avatar",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary",
            "avatarSmall": "MuiChip-avatarSmall",
            "clickable": "MuiChip-clickable makeStyles-clickable-32",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary",
            "colorPrimary": "MuiChip-colorPrimary",
            "colorSecondary": "MuiChip-colorSecondary",
            "deletable": "MuiChip-deletable",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary",
            "deleteIcon": "MuiChip-deleteIcon makeStyles-deleteIcon-33",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary",
            "deleteIconSmall": "MuiChip-deleteIconSmall",
            "disabled": "Mui-disabled",
            "icon": "MuiChip-icon",
            "iconColorPrimary": "MuiChip-iconColorPrimary",
            "iconColorSecondary": "MuiChip-iconColorSecondary",
            "iconSmall": "MuiChip-iconSmall",
            "label": "MuiChip-label",
            "labelSmall": "MuiChip-labelSmall",
            "outlined": "MuiChip-outlined",
            "outlinedPrimary": "MuiChip-outlinedPrimary",
            "outlinedSecondary": "MuiChip-outlinedSecondary",
            "root": "MuiChip-root makeStyles-root-31",
            "sizeSmall": "MuiChip-sizeSmall",
          }
        }
        deleteIcon={
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [],
                  "f00d",
                  "M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z",
                ],
                "iconName": "times",
                "prefix": "fal",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        }
        size="medium"
        variant="default"
      >
        <div
          className="MuiChip-root makeStyles-root-31"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="MuiChip-label"
          />
        </div>
      </ForwardRef(Chip)>
    </WithStyles(ForwardRef(Chip))>
  </Chip>
</ForwardRef>
`;
